--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <div>
             <h1 class="current-city" id="city">Paris</h1>
             <p class="current-details">
-              <span id="current-date"></span>, moderate rain <br />
+              <span id="current-date"></span> moderate rain <br />
               Humidity: <strong>87%</strong>, Wind: <strong>7.2km/h</strong>
             </p>
           </div>
