--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="src/style.css" />
+    <link rel="stylesheet" href="src/styles.css" />
     <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
     <title>Vanilla JS Weather App</title>
   </head>
@@ -35,7 +35,11 @@
               <span id="time"></span>,
               <span id="description"></span>
               <br />
-              Humidity: <strong id="humidity"></strong>, Wind:
+              <br />
+              Humidity: <strong id="humidity"></strong>
+              <br />
+              <br />
+              Wind:
               <strong id="wind-speed"></strong>
             </p>
           </div>
